@@ -117,6 +117,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Introduced list=allimages
 * (bug 13371) Build page set from image hashes
 * Mark non-existent messages in meta=allmessages as missing
+* (bug 13390) One invalid title no longer kills an entire API query
 
 === Languages updated in 1.13 ===
 
